# old-school-projects

./: LICENSE  README
compilers/: Ast.cpp  Ast.h  AstPrimitives.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  TacBuilder.cpp  TacBuilder.h  Token.cpp  Token.h  grammar.txt  impasse.l  main.cpp
compilers/output/: pas_code_and.tac  pas_code_fact.tac  pas_code_func.tac  pas_code_if.tac  pas_code_while.tac  pas_syntax_err.out  pas_syntax_ok.tac
computer_graphics/: CMakeLists.txt  bootstrap.py  final_project.txt
computer_graphics/alglib/: CMakeLists.txt
computer_graphics/assets/ge2test/: Silly_Phone.mtl  colored_fragment_light.fs  default.vs  default_shadow.vs  red_swirls.fs  red_swirls_cylinder.fs  textured_fragment_light.fs
computer_graphics/assets/standard/: colored.fs  colored_light.fs  default.vs  lighting.fs  textured.fs  textured_light.fs
computer_graphics/assignments/maze/: CMakeLists.txt  gamecamera.cpp  gamecamera.h  gamestate.cpp  gamestate.h  main.cpp  mazeapplication.cpp  mazeapplication.h  winstate.cpp  winstate.h
computer_graphics/glcore/: CMakeLists.txt  gl_core_3_2.c  gl_core_3_2.h  gl_core_4_3.c  gl_core_4_3.h  loadshaders_3_2.cpp  loadshaders_3_2.h  loadshaders_4_3.cpp  loadshaders_4_3.h
computer_graphics/glengine2/: CMakeLists.txt  ge2.h  ge2application.h  ge2camera.cpp  ge2camera.h  ge2common.cpp  ge2common.h  ge2compositor.cpp  ge2compositor.h  ge2cubeframebuffer.cpp  ge2cubeframebuffer.h  ge2cubemap.cpp  ge2cubemap.h  ge2debugcamera.cpp  ge2debugcamera.h  ge2framebuffer.cpp  ge2framebuffer.h  ge2fsquad.cpp  ge2fsquad.h  ge2gamestate.cpp  ge2gamestate.h  ge2geometry.cpp  ge2geometry.h  ge2main.cpp  ge2material.cpp  ge2material.h  ge2mesh.cpp  ge2mesh.h  ge2node.cpp  ge2node.h  ge2posteffects.cpp  ge2posteffects.h  ge2renderer.cpp  ge2renderer.h  ge2resourcemgr.cpp  ge2resourcemgr.h  ge2shader.cpp  ge2shader.h  ge2texture2d.cpp  ge2texture2d.h  (+2 more)
computer_graphics/junkyard/assignments/1.1/: CMakeLists.txt  ass11.cpp
computer_graphics/junkyard/assignments/1.2/: CMakeLists.txt  ass12.cpp
computer_graphics/junkyard/assignments/1.3/: CMakeLists.txt  ass13.cpp
computer_graphics/junkyard/assignments/breakout/: CMakeLists.txt  ball.cpp  ball.h  brick.cpp  brick.h  collidable.h  collisionmanager.cpp  collisionmanager.h  common.cpp  common.h  end_state.cpp  end_state.h  game_state.cpp  game_state.h  main.cpp  paddle.cpp  paddle.h  state.cpp  state.h  wall.cpp  wall.h
computer_graphics/junkyard/glengine/: CMakeLists.txt  gecamera.cpp  gecamera.h  gecommon.cpp  gecommon.h  geframebuffer.cpp  geframebuffer.h  gemain.cpp  genode.h  gequad.cpp  gequad.h  gerenderer.cpp  gerenderer.h  gerenderstate.cpp  gerenderstate.h  geshader.cpp  geshader.h  geshaderprogram.cpp  geshaderprogram.h  getexture2d.cpp  getexture2d.h  getime.cpp  getime.h
computer_graphics/junkyard/tests/getest/: CMakeLists.txt  main.cpp
computer_graphics/junkyard/tests/hello/: CMakeLists.txt  hello_3_2.cpp  hello_3_2.frag  hello_3_2.vert  hello_4_3.cpp  hello_4_3.frag  hello_4_3.vert
computer_graphics/junkyard/tests/persp/: CMakeLists.txt  persp_3_2.cpp  persp_3_2.frag  persp_3_2.vert  persp_3_2_glm.cpp  persp_4_3.cpp  persp_4_3.vert
computer_graphics/junkyard/tests/rendertotexture/: CMakeLists.txt  common.cpp  common.h  framebuffer.cpp  main.cpp  quad.cpp  quad.h  texture2d.cpp  time.cpp
computer_graphics/junkyard/tests/texture/: CMakeLists.txt  main.cpp  texture2d.cpp  texture2d.h
computer_graphics/tests/: CMakeLists.txt
computer_graphics/tests/assimp/: CMakeLists.txt  asstool.cpp
computer_graphics/tests/compositor/: CMakeLists.txt  compositorapp.cpp  compositorapp.h  main.cpp
computer_graphics/tests/crepuscular/: CMakeLists.txt  crepuscularapp.cpp  crepuscularapp.h  main.cpp
computer_graphics/tests/cubemap/: CMakeLists.txt  cubemapapp.cpp  cubemapapp.h  main.cpp
computer_graphics/tests/glengine2/: CMakeLists.txt  main.cpp  testapplication.cpp  testapplication.h
computer_graphics/tests/shadow/: CMakeLists.txt  main.cpp  shadowapp.cpp  shadowapp.h
networking/httpd/: CMakeLists.txt  stress_test
networking/httpd/src/: Makefile  README  httpd_common.h  httpd_connection.c  httpd_connection.h  httpd_helpers.c  httpd_helpers.h  httpd_req_handler.c  httpd_req_handler.h  httpd_req_parser.c  httpd_req_parser.h  httpd_server.c  httpd_server.h  main.c
networking/tftpd/: CMakeLists.txt
networking/tftpd/src/: AUTHORS  Makefile  README  tftpd.c  tftpd_common.h  tftpd_server.c  tftpd_server.h
networking/tls_chat/: CMakeLists.txt
networking/tls_chat/src/: Makefile  README  chat.c  chatd.c  chatd_user.c  msc_client.c  msc_client.h  msc_common.c  msc_common.h  msc_library.c  msc_library.h  msc_secure_socket.c  msc_secure_socket.h  msc_server.c  msc_server.h  msc_server_connection.c  msc_server_connection.h  msc_srp_auth.c  msc_srp_auth.h
os/: my_malloc.c
python/keppni/: idnum.py  one.py  three.py  two.py
python/verkefni1/: birthdays.py  excel_index.py  mod_sum.py  palindromes.py  remove_empty.py  reverse_words.py  scramble.py  sum_two.py
python/verkefni2/: countdown.py  cpattern.py  cpattern_old.py  iops.py  poker.py  process_ls.py  transpose.py  zen.py
python/verkefni3/: companies.py  css.py  csv.py  hungry.py  jam.py  jam.txt  process.py  rvk.osm.xml
python/verkefni4/src/: .gitignore  DESCRIPTION.rst  README.rst  setup.py
python/verkefni4/src/doc/: hbrd.sample.yaml
python/verkefni4/src/healthybeard/: about.py  repository.py
python/verkefni5/mastermind/: DESCRIPTION.rst  README.rst  setup.py
python/verkefni5/mpsort/: DESCRIPTION.rst  README.rst  requirements.txt  setup.py
python/verkefni5/popular/: popular.py
web_services/verkefni07/: asgeirb09_verkefni7.js  package.json
web_services/verkefni08/: package.json
web_services/verkefni08/src/: authenticate.js  main.js
web_services/verkefni09/: .eslintrc  gulpfile.babel.js  package.json
web_services/verkefni09/src/: authenticate.js  main.js  messages.js
web_services/verkefni10/: README.md  package.json  webpack.config.js
web_services/verkefni10/src/: main.js  search.js
(+29 files in other folders)
